[package]
name = "clam_bio"
version = "0.1.0"
authors = ["Najib Ishaq <nishaq@my.uri.edu>"]
edition = "2018"

# Publishing lock.
# When you're ready to start publishing, set publish to true
# and update the release github action.
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "0.34"
clam = { path = "../clam" }
csv = "1.1"
ndarray = "0.15"
rayon = "1.5"
serde = "1.0"
serde_derive = "1.0"
